plugins {
    id 'java'
    id "com.github.sherter.google-java-format" version "0.9"
}

version 'unspecified'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    implementation 'org.apache.kafka:kafka-clients:2.6.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'

    testImplementation group: 'org.testcontainers', name: 'kafka', version: '1.15.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.assertj:assertj-core:3.17.2'
}


test {
    useJUnitPlatform()
}
